# ImGuiHydraEditor

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE  Makefile  README.md  build_venv_pip.txt
cmake/: FindEmbree.cmake  FindTBB.cmake  FindUSD.cmake
src/: engine.cpp  engine.h  main.cpp  mainwindow.cpp  mainwindow.h
src/backends/: backend.h  metal.mm  opengl.cpp
src/layouts/: layout.cpp  layout.h
src/models/: model.cpp  model.h
src/sceneindices/: colorfiltersceneindex.cpp  colorfiltersceneindex.h  gridsceneindex.cpp  gridsceneindex.h  xformfiltersceneindex.cpp  xformfiltersceneindex.h
src/style/: imgui_spectrum.cpp  imgui_spectrum.h
src/utils/: usd.cpp  usd.h
src/views/: editor.cpp  editor.h  mainwindow.h  outliner.cpp  outliner.h  sceneindexattribute.cpp  sceneindexattribute.h  sceneindexview.cpp  sceneindexview.h  sessionlayer.cpp  sessionlayer.h  usdsessionlayer.cpp  usdsessionlayer.h  view.cpp  view.h  viewport.cpp  viewport.h
vendors/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
vendors/imguicolortextedit/: CMakeLists.txt
vendors/imguifiledialog/: CMakeLists.txt
vendors/imguizmo/: CMakeLists.txt
